# MaCh3_DUNE

./: .gitignore  BE_AWARE.txt  CMakeLists.txt  ICGPU_local_threads.sh  MaCh3DUNEFactory_8cpp.html  MaCh3DUNEFactory_8cpp__incl.map  MaCh3DUNEFactory_8cpp__incl.md5  MaCh3DUNEFactory_8cpp_source.html  MaCh3DUNEFactory_8h.html  MaCh3DUNEFactory_8h__dep__incl.map  MaCh3DUNEFactory_8h__dep__incl.md5  MaCh3DUNEFactory_8h__incl.map  MaCh3DUNEFactory_8h__incl.md5  MaCh3DUNEFactory_8h_source.html  README.md  README_8md.html  SetMeUp.sh  StructsDUNE_8h.html  StructsDUNE_8h__dep__incl.map  StructsDUNE_8h__dep__incl.md5  StructsDUNE_8h__incl.map  StructsDUNE_8h__incl.md5  StructsDUNE_8h_source.html  annotated.html  build.sh  chain_script.sh  classes.html  classsamplePDFDUNEAtm-members.html  classsamplePDFDUNEAtm.html  classsamplePDFDUNEAtm__coll__graph.map  classsamplePDFDUNEAtm__coll__graph.md5  classsamplePDFDUNEAtm__inherit__graph.map  classsamplePDFDUNEAtm__inherit__graph.md5  classsamplePDFDUNEBeamFD-members.html  classsamplePDFDUNEBeamFD.html  classsamplePDFDUNEBeamFD__coll__graph.map  classsamplePDFDUNEBeamFD__coll__graph.md5  classsamplePDFDUNEBeamFD__inherit__graph.map  classsamplePDFDUNEBeamFD__inherit__graph.md5  classsamplePDFDUNEBeamND-members.html  (+152 more)
.github/: dependabot.yml  pr-title-checker-config.json  pull_request_template.md
Apps/: EventRates.cpp  LikelihoodScan.cpp  Variations.cpp
batch_jobs/: makebatchsub.sh  submit.sh  submit.sub
cmake/: CUDASetup.cmake
configs/: AtmChain.yaml  AtmSample_nueselec.yaml  AtmSample_numuselec.yaml  BranchConfig.yaml  CUDAProb3Linear.yaml  EventRatesDUNE-nosplines.yaml  EventRatesDUNE.yaml  EventRatesDUNE_NDGAr.yaml  EventRatesDUNE_NDGArnew.yaml  EventRates_Atmospherics.yaml  EventRates_Beam.yaml  EventRates_BeamVD.yaml  LLH.yaml  LLHScansDUNE.yaml  LLHScansDUNE_NDGAr.yaml  OscillatorExe.yaml  OscillatorExeOld.yaml  OscillatorObj.yaml  SamplePDFDuneNDGAr_FHC_CCnumuselec.yaml  SamplePDFDuneNDGAr_RHC_CCnumuselec.yaml  SamplePDFDuneND_FHC_CCnumuselec.yaml  SamplePDFDuneND_RHC_CCnumuselec.yaml  SamplePDFDune_FHC_nueselec.cfg  SamplePDFDune_FHC_nueselec.yaml  SamplePDFDune_FHC_numuselec-nosplines.yaml  SamplePDFDune_FHC_numuselec.cfg  SamplePDFDune_FHC_numuselec.yaml  SamplePDFDune_RHC_nueselec.cfg  SamplePDFDune_RHC_nueselec.yaml  SamplePDFDune_RHC_numuselec.cfg  SamplePDFDune_RHC_numuselec.yaml  SamplePDF_test.yaml  Selections_NDGAr_acceptancecorrection.yaml  Selections_NDGAr_acceptancecorrection_2dhist.yaml  SigmaVariationsDUNE.yaml  SigmaVariationsDUNE_NDGAr.yaml  Variations_Atmospherics.yaml  jointFitDUNE.yaml  mach3dune_config.cfg  mach3dune_config.yaml  (+2 more)
doc/: Doxyfile
inputs/: DUNE_flux_systs.xml  DUNE_oscWeights.root  DUNEoscWeights_probLinear.cc  ExampleOscBinning.root  OscCov_PDG2021_v2.yaml  xsec_maqe_cov.root  (+17 more)
python/src/interface/: CMakeLists.txt  MaCh3CovarianceHandler.cpp  MaCh3CovarianceHandler.h  MaCh3Instance.cpp  MaCh3Instance.h  MaCh3Object.h  MaCh3Plugin.h  MaCh3Sample.h  MaCh3SampleHandler.h  MaCh3Systematic.h  pyMaCh3.cpp  pyMaCh3.h
python/src/interface/.ipynb_checkpoints/: MaCh3Instance-checkpoint.h  pyMaCh3-checkpoint.cpp
python/src/interface/modules/: __init__.py
samplePDFDUNE/: CMakeLists.txt  MaCh3DUNEFactory.cpp  MaCh3DUNEFactory.h  StructsDUNE.h  samplePDFBlob.cpp  samplePDFBlob.h  samplePDFDUNEAtm.cpp  samplePDFDUNEAtm.h  samplePDFDUNEAtmBase.cpp  samplePDFDUNEAtmBase.h  samplePDFDUNEBase.cpp  samplePDFDUNEBase.h  samplePDFDUNEBaseGPU.cpp  samplePDFDUNEBaseGPU.h  samplePDFDUNEBaseND.cpp  samplePDFDUNEBaseND.h  samplePDFDUNEBaseNDGAr.cpp  samplePDFDUNEBaseNDGAr.h  samplePDFDUNEBeamFD.cpp  samplePDFDUNEBeamFD.h  samplePDFDUNEBeamFDBase.cpp  samplePDFDUNEBeamFDBase.h  samplePDFDUNEBeamND.cpp  samplePDFDUNEBeamND.h  samplePDFDUNEBeamNDBase.cpp  samplePDFDUNEBeamNDBase.h  samplePDFDUNEBeamNDGar.cpp  samplePDFDUNEBeamNDGar.h  samplePDFDUNEBeamNDGarBase.cpp  samplePDFDUNEBeamNDGarBase.h
splines/: CMakeLists.txt  splinesDUNE.cpp  splinesDUNE.h
src/: CMakeLists.txt  DUNE_LLHscan_osc.cpp  DUNE_LLHscan_systs.cpp  DUNE_atm_chain.cpp  EventRates.cpp  EventRatesDUNE.cpp  EventRatesDUNEBeam.cpp  Fit.cpp  LLHScansDUNE.cpp  LikelihoodScan.cpp  LukeMessAround.cpp  Oscillator.cpp  Plotting.cpp  Projections.cpp  SamplePDFDUNE_test.cpp  Selections.cpp  SigmaVariation.cpp  SigmaVariation2D.cpp  SigmaVariationsDUNE.cpp  Variations.cpp  Variations2D.cpp  jointFitDUNE.cpp  jointFitDUNEBeam.cpp  mainatmos.cpp  oscPlots.cpp  reduceDataSet.cpp  sigmavarDUNEFD.cpp  test.cpp  testAtmDUNE.cpp
tests/: CMakeLists.txt  Comparison.cpp  Comparison.h  TestEventRates.cpp
tests/test_configs/: EventRates_Beam_TEST.yaml
tests/test_results/: EventRatesV2TDR.txt
utils/: CMakeLists.txt  Flux_RootCovToXML_DUNE.py  MakeNormHists.cxx  ReweightPosterior.C  compare_osc2D.C  draw_LLH_scans.C  makeAnatreesNDGAr.cxx  makeCAFsNDGAr.cxx  makeJarlskog.C  makeOscMatrix.py  makeSelectedMtuples.cxx  makeSelectedMtuplesDUNE.py  make_flux_systs_DUNE.C  osc_covariance_DUNE_PDG2021_v1.xml  xsec_covariance_DUNE_systs_060921_v1.root  xsec_covariance_DUNE_systs_060921_v2.xml  xsec_covariance_DUNE_systs_060921_v3.xml
utils/oscMatrixMaker/: makeOscMatrix.py  osc_covariance_DUNE_PDG2021_v1.xml
utils/xsecMatrixMaker/: ConcatanateFluxAndXsec.sh  DUNE_flux_systs.xml  atm_new_tune.xml  makeXSecMatrix.py  split_yaml.py  xml2yaml.py  xsec_covariance_DUNE_dummy.xml  xsec_covariance_DUNE_systs_060921_v1.xml  xsec_covariance_DUNE_systs_060921_v3.xml  xsec_covariance_DUNE_systs_2022a_FD_v3.xml  xsec_covariance_DUNE_systs_2022a_v1.xml  xsec_covariance_DUNE_systs_2022a_v1_XsecOnly.xml  xsec_covariance_DUNE_systs_2022a_v1_XsecOnly_tdr.xml  xsec_covariance_DUNE_systs_2023.xml  xsec_covariance_DUNE_systs_2023_FDOnly-nosplines.xml  xsec_covariance_DUNE_systs_2023_FDOnly.xml  xsec_covariance_DUNE_systs_2023_NDGAr.xml  xsec_covariance_DUNE_systs_2023_nddet_NuPhys.xml  xsec_covariance_DUNE_systs_NDGAr.xml  xsec_covariance_DUNE_systs_NDGAr_new_allparams.xml  xsec_covariance_DUNE_systs_NDGAr_new_allparams_old.xml  xsec_covariance_DUNE_systs_NDGAr_new_xsecparams_only.xml
(+165 files in other folders)
